@@ -44,6 +44,7 @@ class NetplanTry(utils.NetplanCommand):
         self.configuration_changed = False
         self.new_interfaces = None
         self._config_manager = None
+        self.t_settings = None
 
     @property
     def config_manager(self):  # pragma: nocover (called by later commands)
@@ -69,7 +70,8 @@ class NetplanTry(utils.NetplanCommand):
 
         try:
             fd = sys.stdin.fileno()
-            t = netplan.terminal.Terminal(fd)
+            self.t = netplan.terminal.Terminal(fd)
+            self.t.save(self.t_settings)
 
             # we really don't want to be interrupted while doing backup/revert operations
             signal.signal(signal.SIGINT, self._signal_handler)
@@ -79,7 +81,7 @@ class NetplanTry(utils.NetplanCommand):
 
             NetplanApply.command_apply(run_generate=True, sync=True, exit_on_error=False)
 
-            t.get_confirmation_input(timeout=self.timeout)
+            self.t.get_confirmation_input(timeout=self.timeout)
         except netplan.terminal.InputRejected:
             print("\nReverting.")
             self.revert()
@@ -90,6 +92,7 @@ class NetplanTry(utils.NetplanCommand):
             print("\nReverting.")
             self.revert()
         finally:
+            self.t.reset(self.t_settings)
             self.cleanup()
 
     def backup(self):  # pragma: nocover (requires user input)
